--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Priya is beautiful lovely gorgeous</h1>
+    <h1>Priya is beautiful lovely gorgeous and soo cute</h1>
   </body>
 </html>
